merge latest code form upstream 20151225